Fix modal overscroll behavior by adding overflow hidden and overscroll-behavior none

--- a/_croucher/_modal.scss
+++ b/_croucher/_modal.scss
@@ -31,6 +31,8 @@
 
   &-open {
     display: block;
+    overflow: hidden;
+    overscroll-behavior: none;
   }
 
   &-backdrop {
